syntax = "proto3";

package api;
option go_package = "github.com/mayye4ka/notpastebin/pkg/api/go;api";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service NotPasteBin {
    rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse) {
        option (google.api.http) = {
            post: "/note/create"
            body: "*"
        };
    }
    rpc GetNote(GetNoteRequest) returns (GetNoteResponse) {
        option (google.api.http) = {
            post: "/note/get"
            body: "*"
        };
    }
    rpc UpdateNote(UpdateNoteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/note/update"
            body: "*"
        };
    }
    rpc DeleteNote(DeleteNoteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/note/delete"
            body: "*"
        };
    }
}

message CreateNoteRequest {
    string text = 1;
}

message CreateNoteResponse {
    string admin_hash = 1;
    string reader_hash = 2;
}

message GetNoteRequest {
    string hash = 1;
}

message GetNoteResponse {
    string text = 1;
    bool is_admin = 2;
    string reader_hash = 3;
}

message UpdateNoteRequest {
    string text = 1;
    string admin_hash = 2;
}

message DeleteNoteRequest {
    string admin_hash = 1;
}